sfSandBoxCode/force-app/main/default/objects/Inventory_UOM_Conversion__c/Inventory_UOM_Conversion__c.object-meta.xml
<CustomObject>
    <label>Inventory UOM Conversion</label>
    <nameField>
        <label>Conversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory UOM Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>