sfSandBoxCode/force-app/main/default/objects/Inventory_UOM_Conversion__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <formula>&quot;1&quot;  &amp; &quot; &quot;  &amp;   From_UOM__r.Name &amp; &quot; &quot;  &amp;   &quot;Is equal to&quot;  &amp; &quot; &quot;  &amp;  TEXT(Conversion_Factor__c)  &amp; &quot; &quot;  &amp;  Inventory_UoM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comments</label>
    <type>Text</type>
</CustomField>