sfSandBoxCode/force-app/main/default/objects/Inventory_UOM_Conversion__c/fields/Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Factor__c</fullName>
    <label>Conversion Factor</label>
    <precision>17</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>