sfSandBoxCode/force-app/main/default/objects/Inventory_UOM_Conversion__c/fields/From_UOM__c.field-meta.xml
<CustomField>
    <fullName>From_UOM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>From Purchase UOM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Inventory UOM Conversions</relationshipLabel>
    <relationshipName>Inventory_UOM_Conversions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>