sfSandBoxCode/force-app/main/default/objects/Inventory_UOM_Conversion__c/fields/Inventory_UoM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UoM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Inventory UoM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Inventory UOM Conversions (Inventory UoM)</relationshipLabel>
    <relationshipName>Inventory_UOM_Conversions1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>