sfSandBoxCode/force-app/main/default/objects/Inventory_UOM_Conversion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_UOM__c</columns>
    <columns>Inventory_UoM__c</columns>
    <columns>Conversion_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>